deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-server-deployment
  labels:
    app: nodejs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-server
  template:
    metadata:
      labels:
        app: nodejs-server
    spec:
      containers:
      - name: nodejs-server
        image: zahooralam/nodejs-server:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-server-service
spec:
  selector:
    app: nodejs-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
