route.yaml
# route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: node-server
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: node-server 
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "80"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-node-server
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: node-server
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
